add vergroening variable

--- a/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
+++ b/src/markdown/mas/analyses_beheerovereenkomsten.Rmd
@@ -211,6 +211,7 @@ pred_vars <- c("area_prop_sb",
                "meerjarige_fruitteelt_hfdtlt",
                "groenbemester_hfdtlt",
                "zomergranen_hfdtlt2",
+               "vergroening_hfdtlt",
                "zaden_hfdtlt",
                "landbouwinfrastructuur_hfdtlt_pre",
                "grasland_hfdtlt_pre",
@@ -225,6 +226,7 @@ pred_vars <- c("area_prop_sb",
                "meerjarige_fruitteelt_hfdtlt_pre",
                "groenbemester_hfdtlt_pre",
                "zomergranen_hfdtlt_pre2",
+               "vergroening_hfdtlt_pre",
                "zaden_hfdtlt_pre",
                "gewas_div_shannon",
                "perceel_cv_area",
